test/Fail/Issue6959a.err
Issue6959a.agda:21.5-9: error: [UnequalTerms]
c != c′ of type D
when checking that the expression refl has type c ≡ c′
